Class data sharing